--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -1,59 +1,48 @@
 <div role="main">
   <div class="container">
     <div class="row row1">
-      <div class="col-md-12 col1 mapbg">
-        <img src="{{h.url_for_static('/base/images/map.svg')}}">
-      </div>
-      <div class="col-md-12 col1 home-intro-text">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida sed magna eget pellentesque. Duis pulvinar leo at nunc convallis, at molestie dui suscipit. In sit amet lorem dictum, tristique metus sit amet, egestas neque. Integer eros ante, luctus ac lectus quis, vulputate lobortis orci. Vestibulum scelerisque commodo lectus. Phasellus id velit vestibulum, interdum magna id, consequat sem. Suspendisse ornare arcu nec placerat accumsan. In eget eleifend nunc. Duis condimentum diam non tellus bibendum, et eleifend mi malesuada. Mauris urna purus, tristique nec aliquet ac, facilisis a enim. </p>
-        <p class="mapbg "><a class="btn btn-primary" href="#" role="button">Explore Data</a><a class="btn btn-primary" href="#" role="button">Contribute to Cioos</a></p>
+      <div class="col-md-12 col1 centertext title module-content-end">
+        <h1><span>CIOOS</span> Data Catalogue</h1>
+        <h2>Search, find, download — all of our <span>[TOTAL]</span> datasets.</h2>
+
+        <!-- old block -->
+        {# block promoted #}
+        {# snippet 'home/snippets/promoted.html' #}
+        {# endblock #}
       </div>
       <div class="col-md-12 col1 module-content-end">
-        <div class="module-content box ">
-          <h3 class="heading">Regional Associations</h3>
-        </div>
-        <div class="module-content box rabox">
-          <img src="{{h.url_for_static('/base/images/westcoast.svg')}}">
-          <img src="{{h.url_for_static('/base/images/stlawrence.svg')}}">
-          <img src="{{h.url_for_static('/base/images/eastcoast.svg')}}">
-        </div>
+        {% block search %}
+        {% snippet 'home/snippets/search.html' %}
+        {% endblock %}
       </div>
       <div class="col-md-12 col1 module-content-end">
         <div class="module-content box">
-          <h3 class="heading">Latest News</h3>
-        </div>
-        <div class="module-content box rabox">
-        
-          <article class="newsitem">
-            <a href="#">
-              <img src="{{h.url_for_static('/base/images/news.jpg')}}">
-              <header>
-                <h2>News Item</h2>
-              </header>
-              <p><span class="newsday">29</span><span class="newsmonth">March 2019</span></p>
-            </a>
-          </article>
-
-          <article class="newsitem">
-            <a href="#">
-              <img src="{{h.url_for_static('/base/images/news.jpg')}}">
-              <header>
-                <h2>News Item Title</h2>
-              </header>
-              <p><span class="newsday">29</span><span class="newsmonth">March 2019</span></p>
-            </a>
-          </article>
-
-          <article class="newsitem">
-            <a href="#">
-              <img src="{{h.url_for_static('/base/images/news.jpg')}}">
-              <header>
-                <h2>News Item</h2>
-              </header>
-              <p><span class="newsday">29</span><span class="newsmonth">March 2019</span></p>
-            </a>
-          </article>
-
+          {% block eov_list %}
+          <h3 class="heading">SEARCH BY OCEAN VARIABLE</h3>
+          {% set facets = h.cioos_get_facets() %}
+          {% set eov = h.get_facet_items_dict('eov', limit=None, exclude_active=False) %}
+          {% for grouper, list in eov|groupby('category') %}
+          <h4>{{grouper}}</h4>
+          <ul class="media-grid" data-module="media-grid">
+            {% for item in list %}
+            {% set href = h.url_for(controller='package', action='search', eov=item.name) %}
+            {% set label = label_function(item) if label_function else item.display_name %}
+            {% set label_truncated = h.truncate(label, 22) if not label_function else label %}
+            {% set count = count_label(item['count']) if count_label else ('%d' % item['count']) %}
+            {# set img_url = item.image_display_url or h.url_for_static('/base/images/' + item.name + '.png') #}
+            {% set img_url = item.image_display_url or h.url_for_static('/base/images/placeholder-group.png') %}
+            <li class="media-item">
+              <a class="media-image" href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
+                <img src="{{ img_url }}" alt="{{ item.name }}" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">{{ label_truncated }}</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">{{ count }}</span>
+            </li>
+            {% endfor %}
+          </ul>
+          {% endfor %}
+          {% endblock %}
         </div>
       </div>
     </div>
