--- a/ckanext/cioos_theme/templates/footer.html
+++ b/ckanext/cioos_theme/templates/footer.html
@@ -1,3 +1,10 @@
 <div id="footer">
-	footer
+  <div class="container">
+    <div class="col-md-6 col1">
+      CONTACT US
+    </div>
+    <div class="col-md-6 col1 rightalign">
+      BACK TO CIOOS MAIN WEBSITE
+    </div>
+  </div>
 </div>
