--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -158,17 +158,7 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-/* The text in the footer. */
-.site-footer,
-.site-footer label,
-.site-footer small {
-  color: rgba(0, 0, 0, 0.6);
-}
 
-/* The link texts in the footer. */
-.site-footer a {
-  color: rgba(0, 0, 0, 0.6);
-}
 
 #topmenu {
   background: #52A79B;
@@ -570,12 +560,23 @@ header nav,
 
 #footer {
   background-color:#52A79B;
-  background-image: url(/base/images/footerlogo.svg);
-  min-height: 300px;
   background-repeat: no-repeat;
   background-position: 111%;
+  color:#fff;
+  padding:10px;
 }
 
+/* The text in the footer. */
+.site-footer,
+.site-footer label,
+.site-footer small {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+/* The link texts in the footer. */
+.site-footer a {
+  color: rgba(0, 0, 0, 0.6);
+}
 /* ===========================================
    News widget
    =========================================== */
@@ -667,3 +668,5 @@ header nav,
   .search-form {
     border-bottom: none; 
   }
+
+  .rightalign {text-align:right;}
