--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -17,6 +17,194 @@
       </div>
       <div class="col-md-12 col1 module-content-end">
         <div class="module-content box">
+          <h3 class="heading">SEARCH BY OCEAN VARIABLE</h3>
+          <h4>Category A</h4>
+          <ul class="media-grid" data-module="media-grid" style="position: relative; height: 229.65px;">
+            <li class="media-item" style="position: absolute; left: 0px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 160px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 320px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 480px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 640px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 800px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 960px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 1120px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 0px; top: 121px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 160px; top: 121px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 320px; top: 121px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+          </ul>
+          <h4>Other Category</h4>
+          <ul class="media-grid" data-module="media-grid" style="position: relative; height: 229.65px;">
+            <li class="media-item" style="position: absolute; left: 0px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 160px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 320px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 480px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 640px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 800px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 960px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 1120px; top: 15px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 0px; top: 121px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 160px; top: 121px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+            <li class="media-item" style="position: absolute; left: 320px; top: 121px;">
+              <a class="media-image" href="/dataset?eov=name" title="">
+                <img src="image_display_url" alt="name" class="media-image img-responsive">
+              </a>
+              <span class="media-heading">display_name</span>
+              <span class="hidden separator"> - </span>
+              <span class="item-count badge">123</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- 
+      <div class="col-md-12 col1 module-content-end">
+        <div class="module-content box">
           {% block eov_list %}
           <h3 class="heading">SEARCH BY OCEAN VARIABLE</h3>
           {% set facets = h.cioos_get_facets() %}
@@ -44,7 +232,7 @@
           {% endfor %}
           {% endblock %}
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
