--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -56,6 +56,7 @@ $teenwidth: 900px;
   margin: 0 0 10px 10px;
   background-color: white;
   border-radius: 3px;
+  min-height: 200px;
 }
 
 .media-grid {
