--- a/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
+++ b/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
@@ -1,6 +1,6 @@
 <section class="metadata_source">
   <h3>{{ _('Metadata Source') }}</h3>
-  <table class="table table-bordered">
+  <table class="table table-bordered table-condensed">
     <tbody>
       {% block package_metadata_source %}
           <tr>
@@ -8,7 +8,9 @@
               <td style="width:76px;"><img src='../uploads/group/{{ pkg_dict.organization.image_url }}' style="max-height:50px; max-width: 50px;"/></td>
             {% endif %}
             <td>
-	      {% set url = pkg_dict.extras | selectattr("key","equalto","h_source_url") | map(attribute="value") | join('') %}
+        {% set waf_location = pkg_dict.extras | selectattr("key","equalto","waf_location_url") | map(attribute="value") | join('')%}
+        {% set waf_modified_date = pkg_dict.extras | selectattr("key","equalto","waf_modified_date") | map(attribute="value") | join('')%}
+	      {% set h_source_url = pkg_dict.extras | selectattr("key","equalto","h_source_url") | map(attribute="value") | join('') %}
 	      {% set source_guid = pkg_dict.extras | selectattr("key","equalto","guid") | map(attribute="value") | join('') %}
 	      {% set source_guid_suffix = pkg_dict.extras | selectattr("key","equalto","guid_suffix") | map(attribute="value") | join('') %}
 	      {% set title = pkg_dict.extras | selectattr("key","equalto","h_source_title") | map(attribute="value") | join('') %}
@@ -16,23 +18,33 @@
 	      {% set job = pkg_dict.extras | selectattr("key","equalto","h_job_id") | map(attribute="value") | join('') %}
 	      {% set harvest_object = pkg_dict.extras | selectattr("key","equalto","h_object_id") | map(attribute="value") | join('') %}
 	      {# {% set gn_view_metadata_url = pkg_dict.extras | selectattr("key","equalto","gn_view_metadata_url") | map(attribute="value") | join('') %} #}
+        {% set url = waf_location or gn_view_metadata_url or h_source_url %}
 
 	      {% if harvest_object %}
-	        <span style="font-weight:bold;">{{_("View Full Metadata")}}: <a href="{{ h.url_for('harvest_object_show', id = harvest_object ) }}">xml</a> - <a href="{{ h.url_for('harvest_object_show', id = harvest_object ) }}/html">html</a> </span><br>
+	        <span style="font-weight:bold;">{{_("View Full Metadata")}}: <a href="{{ h.url_for('harvest_object_show', id = harvest_object ) }}">XML</a></span><br>
 	      {% else %}
-	        <span">Source information unavailable</span><br>
+	        <span>Source information unavailable</span><br>
 	      {% endif %}
 
-              {% if url and source_guid %}
+              {% if url %}
+              <p style="margin-left:20px;margin-bottom: 0px;">
                   {% if h.is_url(url) %}
-                    <span style="margin-left:20px;"> {{_("Harvested from")}} </span><a href="{{ gn_view_metadata_url if gn_view_metadata_url else url.strip('/') }}/{{source_guid}}{{source_guid_suffix}}">{{ title }}</a>
+                    <span> {{_("Harvest source from")}} </span><a href="{{url}}">{{ title }}</a>
                   {% else %}
                     <span> {{ url }}{{ guid }} </span>
                   {% endif %}
-		 </br>
+                </p>
+
+              {% if waf_modified_date %}
+                <p style="margin-left:50px;font-size:small;line-height: 1;margin-bottom: 2.5px;"><span>{{_("Source last modified")}} </span> {% snippet 'snippets/local_friendly_datetime.html', datetime_obj=waf_modified_date %}</p>
+              {% else %}
+              {% endif %}
+
               {% endif %}
               {% if source_id %}
-                <span style="margin-left:20px;"> {{_("Other records from")}} </span><a href="{{h.url_for('harvest_read', id = source_id)}}">{{ title }}</a> </br>
+                <p style="margin-left:20px;margin-bottom: 0px;">
+                <span > {{_("Other records from")}} </span><a href="{{h.url_for('harvest_read', id = source_id)}}">{{ title }}</a>
+                </p>
               {% endif %}
 
 
