populate "Total datasets" on ckan landing page.

--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -3,7 +3,7 @@
     <div class="row row1">
       <div class="col-md-12 col1 centertext title module-content-end">
         <h1><span>CIOOS</span> Data Catalogue</h1>
-        <h2>Search, find, download — all of our <span>[TOTAL]</span> datasets.</h2>
+        <h2>Search, find, download — all of our <span>{{h.cioos_count_datasets()}}</span> datasets.</h2>
         <!-- old block -->
         {# block promoted #}
         {# snippet 'home/snippets/promoted.html' #}
