--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -4,10 +4,10 @@
 <input type="checkbox" class="main-nav-check" id="main-nav-check" />
 <div class="mobileheader toggle-menu">
   <a class="logo" href="{{ h.url_for('home.index') }}"><img src="{{h.url_for_static('/base/images/logoEN.svg')}}"></a>
-  
+
   <label for="main-nav-check">Menu</label>
 </div>
-<nav class="menubar mobile-nav" id="mobile-nav">    
+<nav class="menubar mobile-nav" id="mobile-nav">
   <h4 class="invis">Mobile Navigation</h4>
   <div id="menu-mobile" class="menu">
     <div class="menu-mobile-menu-container">
@@ -17,11 +17,11 @@
           <li><a href="{{ h.url_for('home.index') }}">Home</a></li>
           {% block header_mobilesite_navigation_tabs %} {{ h.build_nav_main( ('search', _('Datasets')), ('organizations_index', _('Organizations')),
           ('group_index', _('Groups')), ('home.about', _('About')) ) }} {% endblock %}
-          <ul class="shareicons">          
+          <ul class="shareicons">
             <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
             <li><a href="http://facebook.com/cioos.siooc/" tabindex="0" aria-label="Facebook"><i class="fa fa-facebook-square"></i></a></li>
             <li><a href="http://cioos-pacific-wordpress-theme/fr/accueil/" tabindex="0" aria-label="French/English">FR</a></li>
-          </ul>        
+          </ul>
         </ul>
       </nav>
       {% endblock %}
@@ -41,7 +41,19 @@
 </header>
 <header id="mainmenu" class="nav main-nav">
   <div class="container">
-    <a class="logo" href="{{ h.url_for('home.index') }}"><img src="{{h.url_for_static('/base/images/logoEN.svg')}}"></a>
+    {# site_logo can be set in config.ini by changing ckan.site_logo or on admin config page #}
+    {% block header_logo %}
+      {% if g.site_logo %}
+        <a class="logo" href="{{ h.url_for('home.index') }}"><img src="{{ h.url_for_static_or_external(g.site_logo) }}" alt="{{ g.site_title }}" title="{{ g.site_title }}" /></a>
+      {% else %}
+        <h1>
+          <a href="{{ h.url_for('home.index') }}">{{ g.site_title }}</a>
+        </h1>
+        {% if g.site_description %}
+          <h2>{{ g.site_description }}</h2>
+        {% endif %}
+      {% endif %}
+    {% endblock %}
     {% block header_site_navigation %}
     <nav>
       <ul>
