--- a/ckanext/cioos_theme/templates/footer.html
+++ b/ckanext/cioos_theme/templates/footer.html
@@ -1,10 +1,10 @@
 <div id="footer">
   <div class="container">
     <div class="col-md-6 col1">
-      CONTACT US
+      <a href="mailto:info@cioos.ca" title="{{ _('CONTACT US') }}">{{ _('CONTACT US') }}</a>
     </div>
     <div class="col-md-6 col1 rightalign">
-      BACK TO CIOOS MAIN WEBSITE
+      <a href="{{ h.url_for('home.index') }}../" title="{{ _('BACK TO CIOOS MAIN WEBSITE') }}">{{ _('BACK TO CIOOS MAIN WEBSITE') }}</a>
     </div>
   </div>
 </div>
