--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -28,7 +28,7 @@
           <ul class="shareicons">
             <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
             <li><a href="http://facebook.com/cioos.siooc/" tabindex="0" aria-label="Facebook"><i class="fa fa-facebook-square"></i></a></li>
-            <li><a href="http://cioos-pacific-wordpress-theme/fr/accueil/" tabindex="0" aria-label="French/English">FR</a></li>
+            <li>{% snippet "snippets/language_selector.html" %}</li>
           </ul>
         </ul>
       </nav>
@@ -42,7 +42,7 @@
       <ul>
         <li><a href="http://twitter.com/cioos_siooc" tabindex="0" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
         <li><a href="http://facebook.com/cioos.siooc/" tabindex="0" aria-label="Facebook"><i class="fa fa-facebook-square"></i></a></li>
-        <li><a href="http://cioos-pacific-wordpress-theme/fr/accueil/" tabindex="0" aria-label="French/English">FR</a></li>
+        <li>{% snippet "snippets/language_selector.html" %}</li>
         </ul>
     </nav>
   </div>
