--- a/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
+++ b/ckanext/cioos_theme/templates/package/snippets/metadata_source.html
@@ -16,6 +16,7 @@
         {% set xml_location_extras = pkg_dict.extras | selectattr("key","equalto","xml_location_url") | map(attribute="value") | join('')%}
         {% set xml_modified_date = pkg_dict.extras | selectattr("key","equalto","xml_modified_date") | map(attribute="value") | join('')%}
 	      {% set h_source_url = pkg_dict.extras | selectattr("key","equalto","h_source_url") | map(attribute="value") | join('') %}
+        {% set remote_ckan_base_url = pkg_dict.extras | selectattr("key","equalto","remote_ckan_base_url") | map(attribute="value") | join('') %}
 	      {% set source_guid = pkg_dict.extras | selectattr("key","equalto","guid") | map(attribute="value") | join('') %}
 	      {% set source_guid_suffix = pkg_dict.extras | selectattr("key","equalto","guid_suffix") | map(attribute="value") | join('') %}
 	      {% set title = pkg_dict.extras | selectattr("key","equalto","h_source_title") | map(attribute="value") | join('') %}
@@ -26,7 +27,7 @@
         {% set url = pkg_dict.xml_location_url or xml_location_extras or gn_view_metadata_url or h_source_url %}
 
 	      {% if harvest_object %}
-	        <span style="font-weight:bold;">{{_("View Full Metadata")}}: <a href="{{ h.url_for('harvest_object_show', id = harvest_object ) }}">XML</a></span><br>
+	        <span style="font-weight:bold;">{{_("View Harvested Metadata")}}: <a href="{{ remote_ckan_base_url + h.url_for('harvest_object_show', id = harvest_object ) }}">XML</a></span><br>
 	      {% else %}
 	        <span>Source information unavailable</span><br>
 	      {% endif %}
